# EPL

./: .gitignore  404.html  CHANGELOG.md  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EPL_Production_Roadmap.html  EPL_Project_Whitepaper.html  EPL_SYNTAX_REFERENCE.txt  LICENSE  README.md  epl_book.html  main.py  playground.html  pyproject.toml  sitemap.xml  wrangler.jsonc
.github/: PULL_REQUEST_TEMPLATE.md
EPL_GROWTH_ROADMAP/: index.html
architecture/: index.html
benchmarks/: index.html  run_benchmarks.py  thresholds.py
cloudflare-worker-setup/: index.html
docs/: architecture.md  index.html  playground.md  support-matrix.md
epl/: __init__.py  __main__.py  ai.py  ast_nodes.py  async_io.py  block_editor.py  bytecode_cache.py  ci_gen.py  cli.py  cloud_backend.py  compiler.py  concurrency.py  concurrency_real.py  copilot.py  database.py  database_real.py  debugger.py  deploy.py  desktop.py  doc_linter.py  environment.py  error_explainer.py  errors.py  ffi.py  formatter.py  github_tools.py  gui.py  hot_reload.py  html_gen.py  interpreter.py  ios_gen.py  js_transpiler.py  kotlin_gen.py  lexer.py  lsp_server.py  micropython_transpiler.py  networking.py  notebook.py  package_index.py  package_manager.py  (+26 more)
examples/: index.html  js_bridge_demo.epl
getting-started/: index.html
intro/: index.html
language-reference/: index.html
language-spec/: index.html
migration-guide/: index.html
package-manager/: index.html
playground/: index.html
production-roadmap/: index.html
reference-apps/: index.html
release-checklist/: index.html
scripts/: bundle.py  check_benchmark_thresholds.py  ci_release_smoke.py  export_book_pdf.py  monitor_reference_apps.py  verify_docs.py  verify_epl.py
search/: search_index.json
stdlib-reference/: index.html
stylesheets/: extra.css
support-matrix/: index.html
tests/: _syntax_check.py  conftest.py  run_tests.py  test_advanced_features.py  test_asgi_real.py  test_benchmark_baselines.py  test_cli_production.py  test_cloud.py  test_compiler.py  test_comprehensive.py  test_consistency.py  test_deploy.py  test_epl.py  test_error_diagnostics.py  test_error_explainer.py  test_formatter_regression.py  test_framework.py  test_fuzz.py  test_gc.py  test_github_workflows.py  test_integration_real.py  test_interpreter_comprehensive.py  test_js_bridge.py  test_js_transpiler.py  test_kotlin.py  test_kotlin_gen.py  test_legacy_harness_smoke.py  test_llvm.py  test_llvm_optimization.py  test_lockfile.py  test_lsp_hardening.py  test_new_features.py  test_new_modules.py  test_official_packages.py  test_package_manager.py  test_package_trust.py  test_package_ux.py  test_phase1.py  test_phase1_native.py  test_phase2.py  (+35 more)
troubleshooting/: index.html
tutorials/: index.html
versioning-policy/: index.html
vscode-extension/: .vscodeignore  NOTICE  README.md  (+3 more)
(+69 files in other folders)
